# minie

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
include/: buffer.hpp  editor.hpp  platform.hpp  platform_unix.hpp  platform_win.hpp  platform_windows.hpp
include/core/: buffer.hpp  editor.hpp
include/platform/: platform.hpp  platform_unix.hpp  platform_win.hpp
src/: buffer.cpp  editor.cpp  main.cpp  platform.cpp  platform_unix.cpp  platform_win.cpp
src/core/: buffer.cpp  cmd.cpp  editor.cpp  filem.cpp  kevent.cpp  scroll.cpp  update.cpp
src/platform/: platform.cpp  platform_unix.cpp  platform_win.cpp
